--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,14 +50,10 @@ textarea {
   @apply border border-pink-300 rounded px-4 py-2 w-full focus:outline-none focus:ring-2 focus:ring-pink-500;
 }
 
-button {
-  @apply bg-pink-600 text-white px-6 py-2 rounded hover:bg-pink-700 transition;
-}
-
 a {
   @apply text-rose-600 hover:underline font-medium;
 }
 
 .page-container {
-  @apply max-w-4xl mx-auto px-6 py-12 shadow-md bg-accent relative mt-8;
+  @apply max-w-4xl mx-auto px-6 py-12 shadow-md bg-accent relative mt-8 rounded-t-full rounded-b-[3rem];
 }
