--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,5 +55,5 @@ a {
 }
 
 .page-container {
-  @apply max-w-4xl mx-auto px-6 py-12 shadow-md bg-accent relative mt-8 rounded-t-full rounded-b-[3rem];
+  @apply max-w-4xl mx-auto px-6 py-12 shadow-md bg-accent relative m-8 rounded-t-full rounded-b-[3rem];
 }
