--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,5 +55,9 @@ a {
 }
 
 .page-container {
-  @apply max-w-4xl mx-auto px-4 sm:px-6 py-12 shadow-md bg-accent relative mt-8 rounded-t-full rounded-b-[3rem];
+  @apply max-w-4xl mx-auto px-6 py-12 shadow-md bg-accent relative mt-8 mx-4;
+  border-top-left-radius: 30rem;
+  border-top-right-radius: 30rem;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
