--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,7 +55,7 @@ a {
 }
 
 .page-container {
-  @apply max-w-4xl px-6 py-12 shadow-md bg-accent relative mt-8 mx-8;
+  @apply max-w-4xl px-6 py-12 shadow-md bg-accent relative mx-6 mt-8 mx-auto;
   border-top-left-radius: 30rem;
   border-top-right-radius: 30rem;
   border-bottom-left-radius: 1rem;
