--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,7 +55,7 @@ a {
 }
 
 .page-container {
-  @apply max-w-4xl px-6 py-12 shadow-md bg-accent relative mx-6 mt-12 mx-auto w-full;
+  @apply max-w-4xl px-6 pt-16 pb-12 shadow-md bg-accent relative mx-auto mt-12 w-full;
   border-top-left-radius: 30rem;
   border-top-right-radius: 30rem;
   border-bottom-left-radius: 1rem;
